--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -7,6 +7,9 @@ on:
   pull_request:
     branches:
       -main
+  push: 
+    branches:
+      -main
 
 env: 
   BRANCH: ${{github.head_ref}} #need to check
