--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,7 +26,7 @@ jobs:
     second-job:
         runs-on: ubuntu-latest
         #needs => The step mention must be completed to start the current step
-        needs: first-job
+        #needs: first-job
         #IF is added to run rest only when step mentioned must complete successfully
         if: needs.first-job.outputs == 'true'
         steps:
