--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -29,7 +29,7 @@ jobs:
     second-job:  #can be orbitary
         runs-on: ubuntu-latest
         #needs => The step mention must be completed to start the current step
-        #needs: first-job
+        needs: first-job
         #IF is added to run rest only when step mentioned must complete successfully
         if: needs.first-job.outputs == 'true'
         steps:
@@ -37,3 +37,16 @@ jobs:
               uses: actions/setup-python@v2
               with:
                 python-version: '3.12'
+
+    third-job : 
+        runs-on: ubuntu-latest
+        needs: [first-job, second-job]
+        env:
+          Greeting: Hello
+        steps:
+            - name: "Say Hello it's Monday"
+              run: echo "$Greeting $First_Name. Today is $DAY_OF_WEEK!"
+              env:
+                First_Name: Mona
+
+     
