--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -47,6 +47,6 @@ jobs:
             - name: "Say Hello it's Monday"
               run: echo "$Greeting $First_Name. Today is $DAY_OF_WEEK!"
               env:
-                First_Name: Mona
+                First_Name: python
 
      
