--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -11,7 +11,6 @@ on:
   pull_request:
     branches:
       - main
-      
   #Gives a Manual option to trigger the Pipeline
   workflow_dispatch:
 
@@ -31,12 +30,17 @@ jobs:
         #needs => The step mention must be completed to start the current step
         needs: first-job
         #IF is added to run rest only when step mentioned must complete successfully
-        if: needs.first-job.outputs == 'true'
         steps:
             - name: Set up Python
               uses: actions/setup-python@v2
               with:
                 python-version: '3.12'
+            - name: Display Python version
+              run: python -c "import sys; print(sys.version)"
+            - name: Install Dependecies
+              run: |
+                  python -m pip install --upgrade pip
+                  pip install -r requirements.txt
 
     third-job : 
         runs-on: ubuntu-latest
