--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -37,10 +37,10 @@ jobs:
                 python-version: '3.12'
             - name: Display Python version
               run: python -c "import sys; print(sys.version)"
-            - name: Install Dependecies
-              run: |
-                  python -m pip install --upgrade pip
-                  pip install -r requirements.txt
+         #   - name: Install Dependecies
+         #     run: |
+         #         python -m pip install --upgrade pip
+         #         pip install -r requirements.txt
 
     third-job : 
         runs-on: ubuntu-latest
